# CIS565_final_project

./: .gitignore  CMakeLists.txt  README.md  gemv.cu  gemv_verify.cu  gen_inference_results.ipynb  gen_mha_results.ipynb  gen_results.sh  gen_sgemm_results.ipynb  gen_sgemv_results.ipynb  inference_run.cu  kernels.cu  llama2.c  llama2.cu  llama2_fused.cu  log.md  mha_compare.cu  report.md  run.cu  run.cuh  run.h  sgemm.cu  sgemm_run.cu  sgemm_run_test.cu
add_kernels/: elementwiseAddKernel.cu
matmul_kernels/: 1_naive.cu  2_global_mem_coalesce.cu  3_shared_mem_blocking.cu  4_1d_blocktiling.cu  5_2d_blocktiling.cu  6_vectorized.cu  7_warptiling.cu
python_util/: plot_benchmark_results.py
src/: check_params.cpp  kernels.cu  run.cu  run.cuh
src/add_kernels/: elementwiseAddKernel.cu
src/matmul_kernels/: 2_global_mem_coalesce.cu  3_shared_mem_blocking.cu  4_1d_blocktiling.cu  5_2d_blocktiling.cu  8_cub_reduce.cu
src/nonsquare_matmul_kernels/: 1_shared_mem.cu  1_shared_mem.cuh
src/transformer_kernels/: multiHeadAttentionKernel_naive.cu  rmsNormKernel.cu
src/weight_quantization_kernels/: full_to_half.cu  half_to_full.cu
transformer_kernels/: RoPERotationKernel.cu  multiHeadAttentionKernel_naive.cu  rmsNormKernel.cu  siLUElementwiseMulKernel.cu  siluElementwiseMulKernel.cu
weight_quantization_kernels/: half_to_full.cu
